--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,18 +11,19 @@
   <center>
   <div class="container">
     <%= form_for(@user) do |f| %>
+     <%= render 'shared/error_messages' %>
     <div class ="row">
-      <%= f.text_field :name, placeholder: 'Name' %>
+      <%= f.text_field :name, placeholder: 'Name', class: 'form-control' %>
     </div><br><br>
     <div class ="row">
-      <%= f.email_field :email, placeholder: 'Email' %>
+      <%= f.email_field :email, placeholder: 'Email', class: 'form-control' %>
     </div><br><br>
     <div class ="row">
-      <%= f.password_field :password, placeholder: 'Password' %>
+      <%= f.password_field :password, placeholder: 'Password', class: 'form-control' %>
     </div><br><br>
 
     <div class ="row">
-      <%= f.password_field :password_confirmation, placeholder: '... And again pls' %>
+      <%= f.password_field :password_confirmation, placeholder: '... And again pls', class: 'form-control' %>
     </div><br><br>
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
