ADD: User can add multiple ingredients and steps to a recipe
Wrote feature tests for adding multiple ingredients and steps to a recipe
Wrote javascript scripts to run on the new ingredients and steps pages that generate the inputs for the form. Each time the add button is clicked, a new set of inputs is generated
Updated steps and method controller for new form parameter format

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
   </head>
 
-  <body>
-     <%= yield %>
+  <body class="<%= controller_name %> <%= action_name %>">
+    <%= yield %>
   </body>
 </html>
