ADD: User can see full recipe when created
Updated the show in the recipes controller and view to display the full recipe
Created index view and controller method in recipes that displays name and description of all recipes in recipes table

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,1 +1,16 @@
 <h1><%= @recipe.name %></h1>
+<p><%= @recipe.description %></p>
+
+<h2>Ingredients</h2>
+<ul>
+<% @ingredients.each do |ingredient| %>
+  <li><%= ingredient.name %> - <%= ingredient.value %> <%= ingredient.unit %></li>
+<% end %>
+</ul>
+
+<h2>Method</h2>
+<ol>
+<% @steps.each do |step| %>
+  <li><%= step.description %></li>
+<% end %>
+</ol>
