--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Recipes</h1>
 
 <% @recipes.each do |recipe| %>
-  <h3><%= recipe.name %></h3>
+  <h3><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></h3>
   <p><%= recipe.description %></p>
 <% end %>
