--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -27,3 +27,7 @@
 <form action="index.html" method="post" id='add_ingredient_form'>
   <input type="button" id="add_ingredient_button" value="More Ingredients">
 </form>
+
+<form action="index.html" method="post" id='add_ingredient_form'>
+  <input type="button" id="remove_ingredient_button" value="Less Ingredients ">
+</form>
