--- a/app/views/steps/new.html.erb
+++ b/app/views/steps/new.html.erb
@@ -27,3 +27,7 @@
 <form action="index.html" method="post" id='add_step_form'>
   <input type="button" id="add_step_button" value="More Steps">
 </form>
+
+<form action="index.html" method="post" id='add_step_form'>
+  <input type="button" id="remove_step_button" value="Less Steps ">
+</form>
