Sorting out nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
               <% if logged_in? %>
                 <li><%= link_to "Log out", logout_path, method: :delete %></li>
                 <li><%= link_to "Profile", users_path %></li>
+                <li><%= link_to "New recipe", recipes_path, method: :new %></li>
               <% else %>
                 <li><%= link_to "Log in", login_path %></li>
               <% end %>
