ADD: Users can comment on recipes
Added comment model & table containing comment text, recipe_id and user_id
Created comments controller with create route for creating comments
Added form to recipes show page for adding a comment to that recipe
Added to recipes show erb to generate html for showing comments for that recipe

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -14,3 +14,22 @@
   <li><%= step.description %></li>
 <% end %>
 </ol>
+
+<h3>Comments</h3>
+<%= form_tag '/comments', method: 'post', class: "new-comment-form" do %>
+  <%= hidden_field_tag :recipe_id, @recipe.id %>
+  Add Comment
+  <%= text_field_tag :comment %>
+  <%= submit_tag "Submit" %>
+<% end %>
+
+<% @comments.each do |comment| %>
+  <div class="comment">
+    <div class="comment_name">
+      <%= User.find(comment.user_id).name %>: <%= comment.created_at.localtime.strftime("%d/%m/%Y %H:%M") %>
+    </div>
+    <div class="comment_body">
+      <%= comment.comment %>
+    </div>
+  </div>
+<% end %>
