--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%# Navigation bar %>
       <header class="navbar navbar-fixed-top navbar-inverse">
         <div class="container">
           <%= link_to "Logo-goes-here", root_path, id: "logo" %>
@@ -23,6 +25,8 @@
           </nav>
         </div>
       </header>
+
+      <%# End of navigation bar %>
   </head>
 
   <body class="<%= controller_name %> <%= action_name %>">
