--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,4 +3,5 @@
 <% @recipes.each do |recipe| %>
   <h3><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></h3>
   <p><%= recipe.description %></p>
+  <%= image_tag url_for(recipe.image), class: "recipe_image", height: '300' %>
 <% end %>
