--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,5 +3,9 @@
 <% @recipes.each do |recipe| %>
   <h3><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></h3>
   <p><%= recipe.description %></p>
-  <%= image_tag url_for(recipe.image), class: "recipe_image", height: '300' %>
+  <% if recipe.image.attached? %>
+    <div class="recipe_image" id="recipe_image_<%= recipe.id %>">
+      <%= image_tag recipe.image, class: "recipe_image_index", height: '150' %>
+    </div>
+  <% end %>
 <% end %>
