--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,11 +2,9 @@
 <p><%= @recipe.description %></p>
 
 <% if @recipe.image.attached? %>
-  <p>
-    <strong>Image:</strong>
-    <br>
-    <%= image_tag @recipe.image %>
-  </p>
+  <div class="recipe_image_container">
+    <%= image_tag @recipe.image, class: "recipe_image_show", height: '150' %>
+  </div>
 <% end %>
 
 <h2>Ingredients</h2>
