--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,94 @@
  *= require_tree .
  *= require_self
  */
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
+// COLORS
+$white: #fff;
+$black: #212129;
+$gray: #9b9b9b;
+$heart: #17bebb;
+$star: #ffe500;
+$button: #ef3e36;
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  list-style-type: none;
+  text-decoration: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+}
+
+.card {
+  position: relative;
+  background: #fff;
+  max-width: 500px;
+  margin: 20px auto;
+  box-shadow: 0px 0px 30px 2px #000;
+  .header {
+    background: url("http://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg");
+    background-size: cover;
+    min-height: 350px;
+    .icon a .fa-heart-o {
+      position: absolute;
+      left: 85%;
+      bottom: 30.7%;
+      background: $heart;
+      color: #fff;
+      font-size: 1.3em;
+      font-weight: bold;
+      padding: 15px;
+      border-radius: 50%;
+      box-shadow: 0px 5px 30px 1px $heart;
+    }
+  }
+  .text {
+    .food {
+      color: #212129;
+      text-align: left;
+      font-weight: normal;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      margin: 5px 30px;
+    }
+    .fa-clock-o {
+      color: $gray;
+      margin: 0 30px;
+    }
+    .fa-users {
+      color: $gray;
+    }
+  }
+  .stars {
+    margin: 10px 30px;
+    li a i {
+      color: $star;
+    }
+  }
+  .info {
+    margin: 10px 30px;
+  }
+  a.btn {
+    display: block;
+    background: $button;
+    color: #fff;
+    position: relative;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    text-align: center;
+    padding: 10px;
+    transition: 250ms;
+    &:hover {
+      background: $heart;
+      transition: 250ms;
+    }
+  }
+}
