--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,14 +14,7 @@
  *= require_self
  */
 @import url("https://fonts.googleapis.com/css?family=Roboto");
-
-// COLORS
-$white: #fff;
-$black: #212129;
-$gray: #9b9b9b;
-$heart: #17bebb;
-$star: #ffe500;
-$button: #ef3e36;
+@import "font-awesome";
 
 body {
   margin: 0;
@@ -53,13 +46,13 @@ img {
       position: absolute;
       left: 85%;
       bottom: 30.7%;
-      background: $heart;
+      background: #17bebb;
       color: #fff;
       font-size: 1.3em;
       font-weight: bold;
       padding: 15px;
       border-radius: 50%;
-      box-shadow: 0px 5px 30px 1px $heart;
+      box-shadow: 0px 5px 30px 1px #17bebb;
     }
   }
   .text {
@@ -72,17 +65,17 @@ img {
       margin: 5px 30px;
     }
     .fa-clock-o {
-      color: $gray;
+      color: #9b9b9b;
       margin: 0 30px;
     }
     .fa-users {
-      color: $gray;
+      color: #9b9b9b;
     }
   }
   .stars {
     margin: 10px 30px;
     li a i {
-      color: $star;
+      color: #ffe500;
     }
   }
   .info {
@@ -90,7 +83,7 @@ img {
   }
   a.btn {
     display: block;
-    background: $button;
+    background: #ef3e36;
     color: #fff;
     position: relative;
     text-transform: uppercase;
@@ -99,7 +92,7 @@ img {
     padding: 10px;
     transition: 250ms;
     &:hover {
-      background: $heart;
+      background: #17bebb;
       transition: 250ms;
     }
   }
