--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,72 +28,77 @@ body {
   box-sizing: border-box;
 }
 
-img {
-  max-width: 100%;
-}
-
-.card {
+.recipe-card {
   position: relative;
   background: #fff;
   max-width: 500px;
   margin: 20px auto;
-  box-shadow: 0px 0px 30px 2px #000;
-  .header {
-    background: url("http://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg");
-    background-size: cover;
-    min-height: 350px;
-    .icon a .fa-heart-o {
-      position: absolute;
-      left: 85%;
-      bottom: 30.7%;
-      background: #17bebb;
-      color: #fff;
-      font-size: 1.3em;
-      font-weight: bold;
-      padding: 15px;
-      border-radius: 50%;
-      box-shadow: 0px 5px 30px 1px #17bebb;
-    }
-  }
-  .text {
-    .food {
-      color: #212129;
-      text-align: left;
-      font-weight: normal;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-      margin: 5px 30px;
-    }
-    .fa-clock-o {
-      color: #9b9b9b;
-      margin: 0 30px;
-    }
-    .fa-users {
-      color: #9b9b9b;
-    }
-  }
-  .stars {
-    margin: 10px 30px;
-    li a i {
-      color: #ffe500;
-    }
-  }
-  .info {
-    margin: 10px 30px;
-  }
-  a.btn {
-    display: block;
-    background: #ef3e36;
-    color: #fff;
-    position: relative;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    text-align: center;
-    padding: 10px;
-    transition: 250ms;
-    &:hover {
-      background: #17bebb;
-      transition: 250ms;
-    }
-  }
+  box-shadow: 0px 0px 20px 5px rgb(163, 163, 163);
+}
+
+.recipe-card-header {
+  background: url("http://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg");
+  background-size: cover;
+  min-height: 350px;
+}
+
+.fa-heart-o {
+  position: absolute;
+  left: 85%;
+  bottom: 30.7%;
+  background: #17bebb;
+  color: #fff;
+  font-size: 1.3em;
+  font-weight: bold;
+  padding: 15px;
+  border-radius: 50%;
+}
+
+.fa-heart-o:hover {
+  background: #21fffb;
+  box-shadow: 0px 5px 30px 1px #17bebb;
+  transition: 250ms;
+}
+
+.recipe-card-title {
+  color: #212129;
+  text-align: left;
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin: 5px 30px;
+}
+
+.fa-clock-o {
+  color: #9b9b9b;
+  margin: 0 30px;
+}
+
+.fa-users {
+  color: #9b9b9b;
+}
+
+.recipe-card-rating {
+  margin: 10px 30px;
+  color: #ffe500;
+}
+
+.recipe-card-description {
+  margin: 10px 30px;
+}
+
+.recipe-card-cook-btn {
+  display: block;
+  background: #ef3e36;
+  color: #fff;
+  position: relative;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  text-align: center;
+  padding: 10px;
+  transition: 250ms;
+}
+.recipe-card-cook-btn:hover {
+  background: #17bebb;
+  transition: 250ms;
 }
