--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,10 +20,6 @@ body {
   font-family: Raleway, sans-serif;
   list-style-type: none;
   text-decoration: none;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .navbar {
@@ -34,10 +30,17 @@ body {
   min-width: 380px;
 }
 
+.recipe-card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
 .recipe-card {
   position: relative;
   background: #fff;
-  max-width: 500px;
+  width: 400px;
   margin: 20px auto;
   box-shadow: 0px 0px 20px 5px rgb(163, 163, 163);
 }
@@ -48,19 +51,19 @@ body {
   min-height: 350px;
 }
 
-.fa-heart-o {
+.fa-heart {
   position: absolute;
   left: 85%;
   bottom: 30.7%;
   background: #17bebb;
   color: #fff;
-  font-size: 1.3em;
+  font-size: 2em;
   font-weight: bold;
   padding: 15px;
   border-radius: 50%;
 }
 
-.fa-heart-o:hover {
+.fa-heart:hover {
   background: #21fffb;
   box-shadow: 0px 5px 30px 1px #17bebb;
   transition: 250ms;
