Like button has been transfered to the index page and removed from the show page for bart.

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -19,7 +19,14 @@
                 <%= image_tag recipe.image, class: "recipe_image_index" %>
               <% end %>
               <a href="#"><i class="fas fa-heart"></i></a>
+
               <p><%= recipe.likes.count %> <%= (recipe.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+              <% pre_like = recipe.likes.find { |like| like.user_id == current_user.id} %>
+              <% if pre_like %>
+                <%= button_to 'Unlike', recipe_like_path(recipe, pre_like), method: :delete %>
+              <% else %>
+                <%= button_to 'Like', recipe_likes_path(recipe), method: :post %>
+              <% end %>
             </div>
         </div>
         <div class="recipe-card-title">
