--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -23,9 +23,9 @@
               <p><%= recipe.likes.count %> <%= (recipe.likes.count) == 1 ? 'Like' : 'Likes'%></p>
               <% pre_like = recipe.likes.find { |like| like.user_id == current_user.id} %>
               <% if pre_like %>
-                <%= button_to 'Unlike', recipe_like_path(recipe, pre_like), method: :delete %>
+                <%= button_to 'Unlike', recipe_like_path(recipe, pre_like), method: :delete, id:"Like"%>
               <% else %>
-                <%= button_to 'Like', recipe_likes_path(recipe), method: :post %>
+                <%= button_to 'Like', recipe_likes_path(recipe), method: :post , id:"Unlike"%>
               <% end %>
             </div>
         </div>
