--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -18,14 +18,13 @@
               <% if recipe.image.attached? %>
                 <%= image_tag recipe.image, class: "recipe_image_index" %>
               <% end %>
-              <a href="#"><i class="fas fa-heart"></i></a>
 
-              <p><%= recipe.likes.count %> <%= (recipe.likes.count) == 1 ? 'Like' : 'Likes'%></p>
               <% pre_like = recipe.likes.find { |like| like.user_id == current_user.id} %>
               <% if pre_like %>
-                <%= button_to 'Unlike', recipe_like_path(recipe, pre_like), method: :delete %>
+
+                <%= link_to raw("<i class=\"far fa-heart\"></i>"), recipe_like_path(recipe, pre_like), method: :delete, class: "recipe-card-liked-button" %>
               <% else %>
-                <%= button_to 'Like', recipe_likes_path(recipe), method: :post %>
+                <%= link_to raw("<i class=\"fas fa-heart-broken\"></i>"), recipe_likes_path(recipe), method: :post, class: "recipe-card-unliked-button" %>
               <% end %>
             </div>
         </div>
