--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,3 +109,10 @@ body {
   background: #17bebb;
   transition: 250ms;
 }
+
+.search-button {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  height: 2px;
+
+}
