--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <div class="navbar-center">
             <%= form_tag '/recipes/filter', id: 'search_bar', class: "form-inline my-2 my-lg-2" do %>
               <%= search_field_tag :search_bar_input, "", class: "form-control w-100 mr-sm-2", placeholder: 'Search by ingredient' %>
-              <%= submit_tag "Search" %>
+              <%= submit_tag "Search", class: "search-button" %>
             <% end %>
           </div>
 
