--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,11 @@
     <section class="user_info">
       <h1>
         <%= gravatar_for @user %>
-        <%= @user.name %>
+        <%= @user.name %><br><br>
+        <%= @user.description %>
       </h1>
       <%= button_to "Log Out", logout_path, method: :delete %>
+      <li><%= link_to "Settings", edit_user_path(current_user) %></li>
     </section>
   </aside>
 </div>
