ADD: User can add recipes to 'mycookbook'
When logged in and on a recipe's page, the user can click a favourite button which adds the recipe to their favourites
Favourites can be viewed in the /mycookbook route
Favourites can be removed by clicking unfavourite on either the recipe page or the mycookbook page

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,13 @@
 <h1><%= @recipe.name %></h1>
 <p><%= @recipe.description %></p>
 
+<% pre_favourite = @recipe.favourites.find { |favourite| favourite.user_id == current_user.id} %>
+<% if pre_favourite %>
+  <%= button_to 'Unfavourite', recipe_favourite_path(@recipe, pre_favourite), method: :delete %>
+<% else %>
+  <%= button_to 'Favourite', recipe_favourites_path(@recipe), method: :post %>
+<% end %>
+
 <% if @recipe.image.attached? %>
   <div class="recipe_image_container">
     <%= image_tag @recipe.image, class: "recipe_image_show", height: '150' %>
