--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,11 +38,21 @@ body {
 }
 
 .recipe-card {
+  transition: 500ms;
   position: relative;
   background: #fff;
   width: 400px;
   margin: 20px auto;
-  box-shadow: 0px 0px 20px 5px rgb(163, 163, 163);
+  box-shadow: 0px 0px 13px 3px rgb(163, 163, 163);
+  -webkit-transition: 500ms;
+  -moz-transition: 500ms;
+  -ms-transition: 500ms;
+  -o-transition: 500ms;
+}
+
+.recipe-card:hover {
+  transition: 300ms;
+  box-shadow: 0px 0px 16px 10px rgb(221, 221, 221);
 }
 
 .recipe-card-header {
@@ -143,3 +153,112 @@ body {
   border: none;
   height: 2px;
 }
+.profile-left {
+  width: 350px;
+  height: 100%;
+}
+
+.profile-right {
+  width: 80%;
+  height: 100%
+}
+/* 
+.profile-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 auto;
+}
+
+.profile-card-wrapper {
+  width: 300px;
+  height: 500px;
+  position: relative;
+}
+
+.profile-card {
+  margin-left: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 450px;
+  transform: translate(-50%, -50%);
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.profile-card-image {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(138, 138, 138, 0.3);
+  transition: .5s;
+}
+
+.profile-card-image:hover {
+  transform: translateY(-130px);
+  opacity: 0.4;
+  transition: all .5s;
+}
+
+.profile-card-name {
+  position: absolute;
+  color: #383838;;
+  text-align: left;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  margin: 5px 20px;
+  top: 280px;
+  font-size: 40px;
+  background: rgba(255, 255, 255, 0.4);
+  width: 300px;
+  border-radius: 20px 0px 0px 20px;
+}
+
+.profile-card-description {
+  position: absolute;
+  color: #525252;;
+  text-align: left;
+  font-weight: lighter;
+  letter-spacing: 0.1em;
+  margin: 5px 10px;
+  top: 350px;
+  font-size: 15px;
+}
+
+.profile-card-under-placeholder {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+  display: flex;
+}
+
+.profile-edit {
+  z-index: -1;
+}
+
+.profile-card-under {
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background: #fff;
+  font-size: 23px;
+  color: #333;
+  font-weight: bold;
+  margin: 0 6px;
+  transition: .4s;
+  transform: translateY(200px);
+  opacity: 6;
+  z-index: -1
+} */
