--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -6,14 +6,20 @@
     </div>
   <% end %>
 
-<h1>Create your recipe!</h1>
+<div class="new-recipe-container">
+  <div class="new-recipe-left">
+    <h1>Create your recipe!</h1>
 
 
-<%= form_for @recipe, url: {action: "create"}, html: {class: "new-recipe-form"} do |f| %>
-  <%= f.text_field :name %>
-  <%= f.text_area :description %>
-  <%= f.file_field :image %>
-  <%= f.submit "Create" %>
-<% end %>
+    <%= form_for @recipe, url: {action: "create"}, html: {class: "new-recipe-form"} do |f| %>
+      <%= f.text_field :name %>
+      <%= f.text_area :description %>
+      <%= f.file_field :image %>
+      <%= f.submit "Create" %>
+    <% end %>
+  </div>
 
+  <div class="new-recipe-right">
 
+  </div>
+</div>
