--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@ body {
   padding: 15px;
   border-radius: 50%;
   border: none;
-  background: #0b6435;
+  background: #0ea052;
   position: absolute;
   left: 85.5%;
   bottom: 5%;
@@ -81,13 +81,13 @@ body {
 
 .fa-heart {
   color: #fff;
-  font-size: 2em;
+  font-size: 2.3em;
   font-weight: bold;
 }
 
-.fa-heart-broken {
+.fa-plus {
   color: #fff;
-  font-size: 2em;
+  font-size: 2.3em;
   font-weight: bold;
 }
 
@@ -98,8 +98,8 @@ body {
 }
 
 .recipe-card-unliked-button:hover {
-  background: #0d7e41;
-  box-shadow: 0px 5px 30px 1px #008136;
+  background: #00eb62;
+  box-shadow: 0px 5px 30px 1px #00c954;
   transition: 250ms;
 }
 
@@ -163,4 +163,39 @@ body {
   width: 100%;
   height: 150px;
   background-color: rgba(107, 107, 107, 0.171);
+}
+
+.loginregister-container {
+  width: 30%;
+  margin: 0 60%;
+  border-style: none;
+
+  border-color: rgb(226, 244, 246);
+  background-color: rgba(253, 253, 253, 0.7);
+}
+
+.loginregister-header-text {
+  color: white;
+  text-align: center;
+  font-size: 80px;
+  background-color: rgba(241, 241, 241, 0.7);
+  height: 180px;
+  padding-top: 40px;
+}
+
+.loginregister-background {
+  background-image: url("loginregister.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.loginregister-button {
+  margin-left: 25%;
+  height: 40px;
+  color: #fff;
+  font-weight: bold;
+  background-color: #0ea052;
+  border-radius: 10px;
+  border: none;
+  letter-spacing: 3px;
 }
