--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -21,9 +21,9 @@
                 <% pre_like = recipe.likes.find { |like| like.user_id == current_user.id} %>
                 <% if pre_like %>
 
-                  <%= link_to raw("<i class=\"far fa-heart-broken\"></i>"), recipe_like_path(recipe, pre_like), method: :delete, class: "recipe-card-unliked-button" %>
+                  <%= link_to raw("<i class=\"fas fa-heart\"></i>"), recipe_like_path(recipe, pre_like), method: :delete, class: "recipe-card-liked-button" %>
                 <% else %>
-                  <%= link_to raw("<i class=\"fas fa-heart\"></i>"), recipe_likes_path(recipe), method: :post, class: "recipe-card-liked-button" %>
+                  <%= link_to raw("<i class=\"fas fa-plus\"></i>"), recipe_likes_path(recipe), method: :post, class: "recipe-card-unliked-button" %>
                 <% end %>
               <% end %>
             </div>
