--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,7 +10,7 @@
 
 <div class="recipe-card-container">
   <% @recipes.each do |recipe| %>
-    <div id="recipe_<%= recipe.id %>" class="recipe">
+    <div id="recipe_<%= recipe.id %>" class="recipe-card-individual">
 
       <div class="recipe-card">
         <div class="recipe-card-header">
