prep time and serving sizes are now no longer hard coded

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -13,6 +13,8 @@
   <%= f.text_field :name %>
   <%= f.text_area :description %>
   <%= f.file_field :image %>
+  <%= f.time_field :preparation_time %>
+  <%= f.number_field :servings %>
   <%= f.submit "Create" %>
 <% end %>
 
