--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -33,8 +33,8 @@
               <a><%= recipe.name %></a>
             </h1>
             <i class="fa"> <a href="/recipes/<%= User.find(recipe.user_id).id %>/filter"><%= User.find(recipe.user_id).name %></a> </i>
-            <i class="fa fa-clock-o"> 15 Mins</i>
-            <i class="fa fa-users"> Serves 2</i>
+            <i class="fa fa-clock-o"> Prep time: <%= recipe.preparation_time %></i>
+            <i class="fa fa-users"> <%= recipe.servings %></i>
 
             <div class="recipe-card-rating">
               <li>
