Fixed: Rspec issues

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -28,6 +28,7 @@
               <% end %>
             </div>
         </div>
+        <div class="recipe">
         <div class="recipe-card-title">
             <h1 class="recipe-card-title-container">
               <a><%= recipe.name %></a>
@@ -50,6 +51,7 @@
         <a href="/recipes/<%= recipe.id %>" class="recipe-card-cook-btn">Let's Cook!</a>
       </div>
   <% end %>
+  </div>
 </div>
 
 <div class="pagination_box">
