--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,25 +1,31 @@
- <% if flash[:danger] %>
-    <div id="error_explanation">
-      <div class="alert alert-danger">
-        <%= flash[:danger] %>
-      </div>
-    </div>
-  <% end %>
-
 <div class="new-recipe-container">
   <div class="new-recipe-left">
-    <h1>Create your recipe!</h1>
 
-
-    <%= form_for @recipe, url: {action: "create"}, html: {class: "new-recipe-form"} do |f| %>
-      <%= f.text_field :name %>
-      <%= f.text_area :description %>
-      <%= f.file_field :image %>
-      <%= f.submit "Create" %>
+    <% if flash[:danger] %>
+      <div id="error_explanation">
+        <div class="alert alert-danger">
+          <%= flash[:danger] %>
+        </div>
+      </div>
     <% end %>
+
+    <div class="new-recipe-container">
+      <h1>Create your recipe!</h1>
+
+
+      <%= form_for @recipe, url: {action: "create"}, html: {class: "new-recipe-form"} do |f| %>
+        <%= f.text_field :name %>
+        <%= f.text_area :description %>
+        <%= f.file_field :image %>
+        <%= f.submit "Create" %>
+      <% end %>
+    </div>
+
   </div>
 
   <div class="new-recipe-right">
+
+    <h1>Preview area</h1>
 
   </div>
 </div>
