--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,8 +31,8 @@ body {
 }
 
 .recipe-card-individual {
-    box-shadow: 0px 0px 6px 2px rgb(221, 221, 221);
-    margin-bottom: 40px;
+  box-shadow: 0px 0px 6px 2px rgb(221, 221, 221);
+  margin-bottom: 40px;
 }
 
 .recipe-card-container {
@@ -204,4 +204,25 @@ body {
   border: none;
   letter-spacing: 3px;
   width: 200px;
+}
+
+.new-recipe-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.new-recipe-left {
+  width: 50%;
+  text-align: center;
+  border-style: solid;
+  border-color: #b92222;
+}
+
+.new-recipe-right {
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  border-style: solid;
+  border-color: #9b9b9b;
 }
