--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -8,7 +8,6 @@
 
 <h1>Create your recipe!</h1>
 
-
 <%= form_for @recipe, url: {action: "create"}, html: {class: "new-recipe-form"} do |f| %>
   <%= f.text_field :name %>
   <%= f.text_area :description %>
@@ -16,4 +15,15 @@
   <%= f.submit "Create" %>
 <% end %>
 
+<p> Copying in a recipe? You can upload a picture here and we'll convert it into text so you can copy and paste those detailed descriptions rather than writing them out by hand!</p>
+<%= form_tag("/ocr", method: "post", multipart: true) do %>
+  <%= file_field_tag(:image) %>
+  <%= submit_tag("Submit") %>
+<% end %>
 
+<% unless flash[:ocr_text].nil? %>
+  <% flash.keep(:ocr_text) %>
+  <div class="ocr_output">
+    <%= simple_format(flash[:ocr_text]) %>
+  </div>
+<% end %>
