Hopefully a working branch with no fires or plague.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
           </div>
 
           <div class="profile-card-description">
-            <a>Profile description goes here</a>
+            <a><%= @user.description %></a>
           </div>
 
         </div>
