--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -122,7 +122,7 @@
   text-align: center;
   transform: translate(-50%,-50%);
   top: 50%;
-  width: 600px;
+  width: 60%;
   margin-left: 50%;
   margin-top: 70px;
 }
