--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -16,6 +16,8 @@
       <%= form_for @recipe, url: {action: "create"}, html: {class: "new-recipe-form"} do |f| %>
         <%= f.text_field :name %>
         <%= f.text_area :description %>
+        <%= f.time_field :cooking_time %>
+        <%= f.number_field :serving, min: 1, step: 1 %>
         <%= f.file_field :image %>
         <%= f.submit "Create" %>
       <% end %>
