--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -37,9 +37,9 @@
             <h1 class="recipe-card-title-container">
               <a><%= recipe.name %></a>
             </h1>
-            <i class="fa"> <a href="/recipes/<%= User.find(recipe.user_id).id %>/filter"><%= User.find(recipe.user_id).name %></a> </i>
-            <i class="fa fa-clock-o"> 15 Mins</i>
-            <i class="fa fa-users"> Serves 2</i>
+            <i class="fas fa-user-edit"> <a href="/recipes/<%= User.find(recipe.user_id).id %>/filter"><%= User.find(recipe.user_id).name %></a> </i>
+            <i class="far fa-clock"> 15 Mins</i>
+            <i class="fas fa-users"> Serves 2</i>
 
             <% if recipe.likes.count == 1 %>
               <p><%= recipe.likes_count %> Like </p>
