--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@ body {
   font-family: Raleway, sans-serif;
   list-style-type: none;
   text-decoration: none;
+  
 }
 
 .navbar {
@@ -248,11 +249,32 @@ body {
 .recipe-show-body{
   position: absolute;
   margin: 30px;
+  height: 560px;
   width: 65%;
-  top: 150px;
+  top: 120px;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.2);
   background-color: rgba(255, 255, 255, 0.3);
+  overflow: scroll;
+}
+  /* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fafafa00; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(117, 117, 117, 0.5); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(200, 231, 248); 
 }
 
 .recipe-show-title {
