--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
             </a>
           </div>
           <div class="profile-icon">
-            <a href="#">
+            <a href="/mycookbook">
               <i class="far fa-bookmark"> Fav recipes</i>
             </a>
           </div>
